--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: black;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.container{
+  width: 90%;
+  margin: 0 auto;
+}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
